@@ -1,6 +1,14 @@
 2012-12-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* gumps/Gump_manager.cc: Fixing previous fix to not delete gumps when you
 	  want to move them.
+	* combat.cc: Fixed bug #3594342 "Attacking through walls and doors" by using
+	  a center-to-center LOF check.
+	* actor.cc: The above fix made apparent a bug that allows party members to
+	  cause each other o step through walls and doors by moving aside. Since I
+	  haven't isolated the circumstances that cause this, and since it is only
+	  likely to happen while in combat, I disabled moving aside while in combat
+	  as a workaround (the rationale being that you are too busy fighting to
+	  play nice).
 
 2012-12-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* all: Removed ungodly amount of uneeded data copies when passing tiles and
